# nav2_play

./: README.md  nav2_params.yaml
nav2_play_plugins/: CMakeLists.txt  README.md  global_planner_plugin.xml  noti_at_waypoint_plugin.xml  package.xml
nav2_play_plugins/include/nav2_play_plugins/: noti_at_waypoint.hpp  straight_line_planner.hpp
nav2_play_plugins/src/: noti_at_waypoint.cpp  straight_line_planner.cpp
nav2_play_plugins/test/: CMakeLists.txt  test_noti_at_waypoint.cpp
nav2_play_python/: package.xml  setup.cfg  setup.py
nav2_play_python/nav2_play_python/: nav2_play_node.py
