<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>nav2_play_plugins</name>
  <version>0.0.1</version>
  <description>Some simple plugins for palying with ROS navigation2</description>
  <maintainer email="private@example.com">Jay Wang</maintainer>
  <license>GPL v2</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <nav2_core plugin="${prefix}/noti_at_waypoint_plugin.xml" />
    <nav2_core plugin="${prefix}/global_planner_plugin.xml" />
  </export>
</package>
